Update all templates files

--- a/templates/Footer/FooterRenderPartial.html
+++ b/templates/Footer/FooterRenderPartial.html
@@ -2,15 +2,17 @@
     <div class="container">
         <div class="footer__content-wrapper">
             <div class="footer__about-section">
-                <h6 class="footer__title">درباره</h6>
-                <p class="footer__caption">سایت وکیل داد میتواند بهترین همراه برای شما عزیزان باشد تا به سوالات خود با
-                    اطمینان و با وکلای مجرب و با تجربه , جامع عمل به پوشانید. <br>امیدواریم که به کمک همکاران و وکلای
+                <h6 class="footer__title">درباره ما</h6>
+                <p class="footer__caption">سایت وکیل داد میتواند بهترین همراه برای شما عزیزان باشد تا به سوالات خود
+                    با
+                    اطمینان و با وکلای مجرب و با تجربه , جامع عمل به پوشانید. <br>امیدواریم که به کمک همکاران و
+                    وکلای
                     کار درست این مجموعه شما عزیزان را از خدمات تمامی عوامل راضی کرده باشیم. </p>
             </div>
             <div class="footer__call-section">
-                <h6 class="footer__title">تماس</h6>
-                <p class="click-copy">notSetedYet@googlemail.com</p>
-                <p class="click-copy">09090909090</p>
+                <h6 class="footer__title">تماس با ما</h6>
+                <p class="click-copy">atilavalizadeh86@gmail.com</p>
+                <p class="click-copy">09911468832</p>
             </div>
             <div class="footer__symbol-section">
                 <img src="images/enamad.png" alt="" class="footer__img">
