Update template header

--- a/templates/Header/HeaderRenderPartial.html
+++ b/templates/Header/HeaderRenderPartial.html
@@ -7,7 +7,7 @@
 
             <div class="header-wrapper">
                 <div class="header__btns-wrapper">
-                    <a href="{% url 'Login' %}" class="login-btn header__login-btn"><span class="header__login-btn-text">ورود/ثبت نام</span>
+                    <a href="{% url 'login_page' %}" class="login-btn header__login-btn"><span class="header__login-btn-text">ورود/ثبت نام</span>
                         <svg class="header__login-icon icon icon-tabler icon-tabler-login" width="30" height="30"
                              viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round"
                              stroke-linejoin="round">
